add control box and div colors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         
     </div>
     <button id="add-target">Add +</button>
+    <div id="controls">
+        
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
